--- a/BAC-index.html
+++ b/BAC-index.html
@@ -23,156 +23,259 @@
     />
     <title>Biggest Achievement 🏆 Challenge</title>
     <style>
-      body {
-        background-color: #d7acd4;
-        font-family: "Questrial", sans-serif;
+
+                            body {
+                              background-color: #ffffff;
+                              font-family: "Questrial", sans-serif;
+                              color: #363b4e;
+                            }
+
+                            main{
+                              margin: 0 auto;
+                            }
+
+                      .page-container {
+                          max-width: 100%;
+                          padding: 0px;
+                          background-color:  #d6bcd4;
+                          border: none;
+                      }
+
+                      .grid-container {
+                          max-width: 1080px;
+                          display: grid;
+                          grid-template-rows: auto;
+                          gap: 20px;
+                          padding: 0px;
+                          margin: 0 auto;
+                          border: none;
+                      }
+
+                      .intro-images {
+                          display: flex;
+                          justify-content: space-between;
+                          align-items: center;
+                          gap: 15px;
+                          margin: 0 auto;
+                          border: none;
+                      }
+
+                      .intro-images img {
+                          width: 300px;
+                          height: 300px;
+                          object-fit: cover;
+                      }
+
+                      .text-section {
+                          text-align: center;
+                          flex: 1;
+                      }
+
+                      .section-header {
+                          margin: 0;
+                          margin-bottom: 30px;
+                          font-size: 30px;
+                      }
+
+                      .section-subheader {
+                          margin: 5px 0;
+                          margin top: 20px;
+                          margin-bottom: 20px;
+                      }
+                      .about-achievement-text {
+                          margin: 10px 0;
+                          font-size: 15px;
+                          text-align: justify;
+                          font-family: "Didact Gothic", sans-serif;
+                          padding-top: 7px;
+                      }
+
+                      .flex-container {
+                        display: flex;
+                        justify-content: space-between;
+                        flex-wrap: wrap;
+                        max-width: 1080px;
+                        margin: 20px auto;
+              }
+
+                    .bubble-journey-container,
+                    .bubble-cbt-container {
+                    flex: 1;
+                    max-width: 48%;
+                    margin: 10px;
+                    background-color: #fafad6;
+                    padding: 20px;
+                    border-radius: 20px;
+                    font-family: "Didact Gothic", sans-serif;
+                 }
+
+              .official-button,
+              .training-button {
+                margin-top: 10px;
+                padding: 10px 15px;
+                background-color: #007bff;
+                color: white;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+
+              }
+
+              .official-button {
+                margin-left: 50px;
+              }
+            .training-button {
+                margin-left: 50px;
+             }
+
+              .official-button:hover,
+              .training-button:hover {
+                background-color: #0056b3;
+              }
+
+              .tips-container {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 20px;
+        margin-top: 20px;
       }
 
-      .container {
-        max-width: 800px;
-        margin: 20px auto;
-        background-color: #eec2c2;
-        padding: 20px;
-        border-radius: 20px;
-        display: block;
-        border: 1px solid;
-        border-color: #9a9a9a;
+      .tip {
+        padding: 15px;
+        text-align: left;
       }
 
-      .grid {
-        margin: 10px 0;
-        padding-top: 10px;
-      }
-
-      .intro-picture img {
-        max-width: 20%;
-        height: auto;
-        float: left;
-        margin-right: 20px;
-        margin-bottom: 15px;
-        border-radius: 20px;
-      }
-
-      .section-about-achievement {
-        margin-left: 20px;
-        margin-bottom: 15px;
-      }
-
-      .section-about-achievement h2 {
-        font-size: 30px;
-        color: #363b4e;
-      }
-
-      .section-about-achievement p {
-        /*font-family: "Roboto", sans-serif;*/
-        font-size: 16px;
-        color: #363b4e;
+      .title {
+        font-size: 25px;
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="intro-section">
-        <h1 class="section-header">
-          My Biggest Achievement: Earning a CBT Certificate
-        </h1>
-        <div class="grid">
-          <div class="intro-picture">
+    <header>
+      <div class="fixed-bar">
+        <p class="logo">🏍 Blog</p>
+        <p class="menu"></p>
+      </div>
+    </header>
+    <main>
+      <!-- Section 1 -->
+      <div class="page-container">
+        <div class="grid-container">
+          <div class="intro-images">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/146/137/original/MBR-motorbike.jpg?1727970699"
+              class="motorbike-me"
+              alt="Me on a motorbike"
+            />
+            <div class="text-section">
+              <h1 class="section-header">My Biggest Achievement 🏆</h1>
+              <h2 class="section-subheader">Earning a CBT Certificate</h2>
+            </div>
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/146/308/original/MBR-Motorbike2.jpg?1728056395"
+              class="motorbike-alone"
+              alt="Motorbike alone"
             />
           </div>
         </div>
-        <div class="section-about-achievement">
-          <h2 class="about-achievement-header">
-            From aspiration to achievement
-          </h2>
-          <p class="about-achievement-text">
-            In the UK, CBT is required to ride a motorbike or scooter on public
-            roads. For me, completing it wasn’t just about gaining the necessary
-            skills and certification; it was a chance to challenge myself and
-            push my limits in pursuit of my long-desired goal of riding a
-            motorbike.
-          </p>
+      </div>
+      <div class="flex-container">
+        <!-- Section 2 -->
+        <div class="bubble-journey-container">
+          <div class="section-journey">
+            <h2 class="journey-header">My CBT journey</h2>
+            <p class="journey-text">
+              I had wanted to ride a motorbike for so long and in the UK, a CBT
+              is required to ride on public roads. For me, completing it wasn’t
+              just about gaining the necessary skills and certification; it was
+              an opportunity to push my limits and achieve a long-held dream.
+              Learning to ride tested my focus, balance, and determination, but
+              receiving my certificate at the end of a long day was an
+              exhilarating moment of success. With this achievement under my
+              belt, I’m now looking forward to pursuing my full motorcycle
+              licence in the near future.
+            </p>
+          </div>
+        </div>
+        <!-- Section 3 -->
+        <div class="bubble-cbt-container">
+          <div class="section-about-cbt">
+            <h2 class="about-cbt-header">What is CBT?</h2>
+            <p class="about-cbt-text">
+              The CBT (Compulsory Basic Training) is a one-day course in the
+              United Kingdom that ensures new riders understand road safety,
+              bike control, and essential skills for riding a motorbike. Upon
+              successful completion, the DL196 certificate is awarded and allows
+              to ride on public roads for two years (with an L plate) on
+              motorbikes up to 125cc.
+            </p>
+            <button class="official-button" id="official-button">
+              Official CBT Information
+            </button>
+            <button class="training-button" id="training-button">
+              Find a Training centre
+            </button>
+          </div>
         </div>
       </div>
-      <div class="section-about-cbt">
-        <h2 class="about-cbt-header">What is CBT?</h2>
-        <p class="about-cbt-text">
-          The CBT (Compulsory Basic Training) is a one-day course in the United
-          Kingdom that ensures new riders understand road safety, bike control,
-          and essential skills for riding a motorbike. Upon successful
-          completion, the DL196 certificate is awarded and allows to ride on
-          public roads for two years (with an L plate) on motorbikes up to
-          125cc.
-        </p>
-      </div>
-      <div class="section-journey">
-        <h2 class="journey-header">My CBT journey and future aspirations</h2>
-        <p class="journey-text">
-          From the moment I arrived at the training centre, I knew I was facing
-          a challenge I was determined to conquer, especially since I had wanted
-          to ride a motorbike for so long. Learning to ride tested my focus,
-          balance, and determination, but receiving my certificate at the end of
-          a long day was an exhilarating moment of success. With this
-          achievement under my belt, I’m now looking forward to pursuing my full
-          motorcycle license.
-        </p>
-      </div>
-      <div class="section-inspired">
-        <h2 class="feeling-inspired-header">
-          Feeling inspired to start your riding journey?
-        </h2>
-        <p class="feeling-inspired-text">
-          If you're ready to venture out and ride a motorbike in the UK, the
-          first step is completing your Compulsory Basic Training (CBT). Here
-          are some helpful links to get you started:
-        </p>
-        <div class="feeling-inspired-links">
-          <li>
-            <a
-              href="https://www.gov.uk/motorcycle-cbt#:~:text=Compulsory%20basic%20training%20(%20CBT%20)%20is,that%20you%20pass%20or%20fail."
-              >Official UK Goverment CBT Information</a
-            >
-          </li>
-          <li>
-            <a href="https://www.gov.uk/find-motorcycle-training"
-              >Find a CBT training center near you</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.bennetts.co.uk/bikesocial/news-and-views/advice/new-riders-and-training/picking-first-motorbike"
-              >Tips for choosing your first bike</a
-            >
-          </li>
-        </div>
-      </div>
+      <!-- Section 4 -->
       <div class="tips">
         <h2 class="tips-header">Tips for new riders</h2>
-        <p>
-          <strong>Start Slow:</strong> After earning your CBT certificate, take
-          your time to practice riding in safe, low-traffic areas to build your
-          confidence.
-        </p>
-        <p>
-          <strong>Wear Full Gear: </strong>Always use proper riding gear, not
-          just a helmet. Protective clothing, gloves, and boots can
-          significantly enhance your safety.
-        </p>
-        <p>
-          <strong>Remember Your Checks: </strong> Always perform thorough checks
-          before maneuvering: check your mirrors, signal your intentions, and
-          look for blind spots.
-        </p>
-        <p>
-          <strong>Stay Informed: </strong> Read up on road safety and motorcycle
-          handling tips to enhance your skills. Resources like
-          <a href="https://bikesafe.co.uk/">Bike Safe</a> offer great
-          information.
-        </p>
+        <div class="tips-container">
+          <div class="tip">
+            <p>
+              <span class="title">🦥 <br /><strong>Start Slow</strong></span>
+              <br />
+              After earning your CBT certificate, take your time to practice
+              riding in safe, low-traffic areas to build your confidence.
+            </p>
+          </div>
+          <div class="tip">
+            <p>
+              <span class="title">🏍 <br /><strong>Wear Full Gear</strong></span>
+              <br />
+              Always use proper riding gear, not just a helmet. Protective
+              clothing, gloves, and boots can significantly enhance your safety.
+            </p>
+          </div>
+          <div class="tip">
+            <p>
+              <span class="title"
+                >👁 <br /><strong>Remember Your Checks</strong></span
+              >
+              <br />
+              Always perform thorough checks before maneuvering: check your
+              mirrors, signal your intentions, and look for blind spots.
+            </p>
+          </div>
+          <div class="tip">
+            <p>
+              📰
+              <br />
+              <strong>Stay Informed</strong>
+              <br />
+              Read up on road safety and motorcycle handling tips to enhance
+              your skills. Resources like
+              <a href="https://bikesafe.co.uk/">Bike Safe</a> offer great
+              information.
+            </p>
+          </div>
+        </div>
       </div>
-    </div>
+    </main>
+    <script>
+      document.getElementById("official-button").onclick = function () {
+        window.open(
+          "https://www.gov.uk/motorcycle-cbt#:~:text=Compulsory%20basic%20training%20(%20CBT%20)%20is,that%20you%20pass%20or%20fail.",
+          "_blank"
+        );
+      };
+
+      document.getElementById("training-button").onclick = function () {
+        window.open("https://www.gov.uk/find-motorcycle-training", "_blank");
+      };
+    </script>
+
     <footer>Coded by Marina Reggiani</footer>
   </body>
 </html>
